--- a/Project/public/css/jokes.css
+++ b/Project/public/css/jokes.css
@@ -1,9 +1,9 @@
-* {margin: 0; padding: 0; }
+ * {margin: 0; padding: 0; }
 body {font-family: Arial, Helvetica, Sans-serif; }
-header {display: block;  background-color: #bdc3c7; padding: 20px; border-bottom: 5px solid #757575;}
+header {display: block;  background-color: #3cbc8d; padding: 20px; border-bottom: 5px solid #757575;}
 h1 {font-weight: normal; padding: 1.5em; color: white; text-shadow: 1px 1px 0px #444; width: 1000px; margin: auto;}
 
-nav {background-color: #9c88ff;}
+nav {background-color: #443A5C;}
 
 nav a {color: white; text-decoration: none;}
 nav a:hover {color: #ddd;}
@@ -22,6 +22,9 @@ label {clear: left; padding: 0; margin: 0;}
 input[type="submit"] {margin-left: 15em; width: auto; padding: 0.5em 1em; clear: both; font-size: 1em;}
 form {overflow: auto; clear: both; display: block;}
 
-blockquote {display: table; margin-bottom: 1em; border-bottom: 1px solid #ccc; padding: 0.5rem;}
-blockquote p {display: table-cell; width:90%; vertical-align: top;}
-blockquote form {display: table-cell; width: 10%;}
+blockquote {display: table; margin-bottom: 1em; border-bottom: 1px solid #ccc; padding: 0.5em; }
+blockquote p {display: table-cell; width: 90%; vertical-align: top;}
+blockquote form {  display: table-cell; width: 10%;}
+
+.errors {padding: 1em; border: 1px solid red; background-color: lightyellow; color: red; margin-bottom: 1em; overflow: auto;}
+.errors ul {margin-left: 1em;}
